# fl-base-pack

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  REUSE.toml  SUPPORT.md  manifest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: add-to-project.yml  meshlib.yml  release.yml  validate.yml
ai/: fighter.lua  trainer.lua
aircraft/f16a/: SOURCES.md  f16a.expect.toml  f16a.glb  f16a.toml  f16a_build.py  f16a_cockpit.glb  f16a_lod0.glb  f16a_lod1.glb  f16a_lod2.glb  f16a_shadow.glb  f16a_textures.py  transcribe.py  verify_targets.py
aircraft/f5e/: SOURCES.md  derive.py  f5e.expect.toml  f5e.glb  f5e.toml  f5e_build.py  f5e_cockpit.glb  f5e_lod0.glb  f5e_lod1.glb  f5e_lod2.glb  f5e_shadow.glb  f5e_textures.py  verify_targets.py
aircraft/t38a/: SOURCES.md  derive.py  t38a.expect.toml  t38a.glb  t38a.toml  t38a_build.py  t38a_cockpit.glb  t38a_lod0.glb  t38a_lod1.glb  t38a_lod2.glb  t38a_shadow.glb  (+2 more)
entities/: f16a.toml  f5e.toml  t38a.toml
missions/: f16a_intercept.yaml  f5e_intercept.yaml
sensors/: aim7m_seeker.toml  aim9p_seeker.toml  apg66.toml  apq159.toml  eyeball_day.toml  eyeball_night.toml
tools/meshlib/: README.md  pyproject.toml
tools/meshlib/src/fl_meshlib/: __init__.py  airfoil.py  check.py  curves.py  damage.py  export.py  loft.py  scene.py  stations.py  uvatlas.py
tools/meshlib/tests/: conftest.py  test_airfoil.py  test_check.py  test_curves.py  test_determinism.py  test_stations.py
weapons/: aim7m.toml  aim9p.toml  alq131.toml  lau3.toml  m39a2.toml  m61a1.toml  mk82.toml  tank_300gal.toml  tank_370gal.toml
(+7 files in other folders)
